[gd_scene load_steps=16 format=3 uid="uid://b3023qlwvh0gl"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_bm1p1"]
[ext_resource type="Texture2D" uid="uid://b64kr8w37modd" path="res://sprites/Boss.png" id="2_x6tee"]
[ext_resource type="PackedScene" uid="uid://iemtpsahfvt5" path="res://scenes/wand.tscn" id="3_muq5f"]
[ext_resource type="Texture2D" uid="uid://ukt7u7jyv2o1" path="res://sprites/Light.png" id="4_c5wbq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbsan"]
size = Vector2(11, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dfbf"]
atlas = ExtResource("2_x6tee")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg6qe"]
atlas = ExtResource("2_x6tee")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vafqd"]
atlas = ExtResource("2_x6tee")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33fwf"]
atlas = ExtResource("2_x6tee")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kstee"]
atlas = ExtResource("2_x6tee")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x31qi"]
atlas = ExtResource("2_x6tee")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8ofi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dfbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vafqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33fwf")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kstee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x31qi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ic524"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fs3u0"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fidj2"]
_data = {
"RESET": SubResource("Animation_ic524"),
"death": SubResource("Animation_fs3u0")
}

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_bm1p1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_gbsan")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p8ofi")
animation = &"death"
autoplay = "walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fidj2")
}

[node name="Wand" parent="." instance=ExtResource("3_muq5f")]
position = Vector2(-9, -4.76837e-07)
rotation = -0.401426

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="HandTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(1.19209e-07, 0.999999)
scale = Vector2(37.6172, 37.6172)
energy = 0.0
texture = ExtResource("4_c5wbq")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="HandTimer" to="." method="_on_hand_timer_timeout"]
